--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,31 +6,21 @@
         android:layout_height="match_parent">
 
 
-    <TextView
-            android:text="Welcome"
-            android:textSize="40sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"/>
-    <TextView
-            android:text="Name"
-            android:textSize="40sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text_name"
-            app:layout_constraintTop_toBottomOf="@+id/text_welcome" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
     <Button
-            android:text="Begin test"
+            android:text="Begin"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:id="@+id/button_begin_test" app:layout_constraintStart_toStartOf="@+id/text_welcome"
-            app:layout_constraintEnd_toEndOf="@+id/text_welcome" android:layout_marginTop="250dp"
-            app:layout_constraintTop_toBottomOf="@+id/text_name"
-            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
+            android:layout_height="75dp"
+            android:id="@+id/button_begin_test"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textSize="28sp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:backgroundTint="@color/black" app:cornerRadius="0dp"/>
+    <ImageView
+            android:layout_width="317dp"
+            android:layout_height="158dp" app:srcCompat="@drawable/endava"
+            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button_begin_test"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
