--- a/app/src/main/res/layout/fragment_tips.xml
+++ b/app/src/main/res/layout/fragment_tips.xml
@@ -24,6 +24,7 @@
                 android:textStyle="bold"
                 android:text="Tips" android:id="@+id/text_tips" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"/>
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="48dp"
+                android:textColor="@color/colorPrimary"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
