--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -18,13 +18,13 @@
             android:textColor="@color/colorPrimary"/>
     <TextView
             android:text="TextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:textSize="24sp"
             android:gravity="center_horizontal"
             tools:text="You don't need help"
             android:layout_height="wrap_content"
             android:id="@+id/text_advice" android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
-            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
