--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="colorPrimary">#FB8C00</item>
         <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="android:statusBarColor">@color/black</item>
         <!--<item name="colorAccent">@color/colorPrimaryDark</item>-->
     </style>
 
